# omega-to-openlabel

./: .gitignore  README.md  pyproject.toml
src/omega_to_openlabel/: cli.py  converter.py
tests/: test_cli.py  test_converter.py
tests/sample_data/: bypassing_scenario1.mcap
weblabel_config/: README.md  structure.json
weblabel_config/misc/: empty_pcd.pcd
