[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omega-to-openlabel"
version = "1.0.0"
description = "Converter utilities to export OmegaPRIME recordings into ASAM OpenLABEL format"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
dependencies = [
    "vcd",
    "omega-prime"
]

[project.scripts]
omega-to-openlabel = "omega_to_openlabel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
